# picky-rabbit

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
picky-rabbit/: app.py
